@@ -18,8 +18,12 @@ Revision 0.1.8
 - When comparing ASN.1 types, by-tag and/or by-constraints matching
   can now be performed with the isSuperTypeOf()/isSameTypeWith() optional
   flags.
-- Constructed types now verify their consistency by invoking isSameTypeWith()
-  for their components rather than isSuperTypeOf() as it used to be.
+- Constructed types now verify their consistency by invoking 
+  isSameTypeWith(matchTags=True, matchConstraints=False) and
+  isSuperTypeOf(matchTags=False, matchConstraints=True) for each of their
+  components rather than isSuperTypeOf() as it used to be. Constriants check 
+  could be enforced to isSameTypeWith() with the strictConstraints=True
+  constructed classes attribute.
 - Constructed types can now be initialized with new .setComponents() method
   which accepts both var-args and keyword-args. Default repr() modified to
   reflect this change.
